--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,3 +1,11 @@
 [[constraint]]
   name = "github.com/kataras/iris"
   version = "11.2.3"
+
+[[override]]
+  name = "github.com/flosch/pongo2"
+  branch = "master"
+
+[[override]]
+  name = "github.com/CloudyKit/jet"
+  branch = "master"
